change look and feel and sync inventory

--- a/qp_phonix_front/public/css/loader.css
+++ b/qp_phonix_front/public/css/loader.css
@@ -1,6 +1,6 @@
 .loader {
     border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #4d6444; /* Blue */
+    border-top: 16px solid #1aa2aa; /* Blue */
     border-radius: 50%;
     width: 120px;
     height: 120px;
