--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -44,7 +44,7 @@
         border: 0 !important;
     }
     table.item_list  thead th {
-        background-color: #4D6444;
+        background-color: #1aa2aa;
         color: #FFFFFF;
         font: normal normal bold 14px/38px Montserrat;
         border: 1px solid #C8C8C8;
@@ -53,7 +53,7 @@
     table tbody td{
         font: normal normal medium 14px/41px Montserrat;
         letter-spacing: 0px;
-        color: #4D6444;
+        color: #000;
         opacity: 1;
         border: 1px solid #C8C8C8;
     }
@@ -89,6 +89,7 @@
 
     .filter-option{
         color: #FFFFFF;
+        background-color: #1aa2aa !important;
     }
 
     .item_select{
@@ -102,15 +103,15 @@
     }
 
 
-    /*.btn.filter_style{
-        background-color: rgba(70, 88, 63, 0.07) !important;
-        color: #4d6444 !important;
-    }*/
+    .btn.filter_style{
+        background-color: #000 !important;
+        color: #000 !important;
+    }
 
     .link_abc{
         margin-right: 0.5em;
         text-decoration: underline !important;
-        color: #4D6444 !important;
+        color: #000 !important;
         cursor: pointer;
         }
     
