--- a/qp_phonix_front/templates/main.html
+++ b/qp_phonix_front/templates/main.html
@@ -17,7 +17,7 @@
         text-align: left;
         font: normal normal bold 28px/98px Montserrat;
         letter-spacing: 0px;
-        color: #4D6444;
+        color: #000;
         opacity: 1;
     }
 
@@ -42,7 +42,7 @@
     }
 
     .button-default{
-        background: #4D6444 0% 0% no-repeat padding-box !important;
+        background: #1aa2aa 0% 0% no-repeat padding-box !important;
 
     }
 
