--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -247,6 +247,7 @@ button {
         
     </div>
     <input type="hidden" id="is_filter_abc" value="{{is_filter_abc}}">
+    <input type="hidden" id="idlevel" value="{{idlevel}}">
     <div class="row " >
         <div class="col-sm-5 text-left row-abc">
             <input type="text" id = "filter_text" class="form-control" name="" id="" placeholder="Search by name">
