--- a/qp_phonix_front/templates/item_formulary/row.html
+++ b/qp_phonix_front/templates/item_formulary/row.html
@@ -1,6 +1,6 @@
 {%for item in item_list %}
 
-    <tr data-item-name = "{{item.item_name}}" class="{{item.Categoria_code}} {{item.SubCategoria_code}} item-row {{item.name}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" style="{{'display: none;' if not disabled_off else ''}}" data-id = '{{item.name}}'>
+    <tr data-item-name = "{{item.item_name}}" class="{{item.sku}} {{item.qp_phonix_class}} item-row {{item.name}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" style="{{'display: none;' if not disabled_off else ''}}" data-id = '{{item.name}}'>
         <input type="hidden" id = "item_id" value= "{{item.name}}" >
         <td class="lateralleft padding_list {{'row_select' if item.cantidad else ''}}"><img src="{{item.image}}" class="rounded float-left item_img" onerror="this.src='/assets/qlip_bussines_theme/images/company_default_logo.jpg'" /> 
         
@@ -29,10 +29,10 @@
         {%endif%}
         
         <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left ">Unidad <br> x {{item.inqt}}</div></td>
-        <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.sku}}</div></td>
+        <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.stock_uom}}</div></td>
         
         {% if is_internal%}
-            <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left">Si</div></td>
+            <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.sku}}</div></td>
         {%endif%}
     </tr>
 
