--- a/qp_phonix_front/templates/item_formulary/row.html
+++ b/qp_phonix_front/templates/item_formulary/row.html
@@ -1,6 +1,6 @@
 {%for item in item_list %}
 
-    <tr data-item-name = "{{item.item_name}}" class="{{item.sku}} {{item.qp_phonix_class}} item-row {{item.name}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" style="{{'display: none;' if not disabled_off else ''}}" data-id = '{{item.name}}'>
+    <tr data-item-name = "{{item.item_name}}" class="inventary-{{'SI' if item.quantity > 0 else 'NO'}} {{item.sku}} {{item.qp_phonix_class}} item-row {{item.name}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" style="{{'display: none;' if not disabled_off else ''}}" data-id = '{{item.name}}'>
         <input type="hidden" id = "item_id" value= "{{item.name}}" >
         <td class="lateralleft padding_list {{'row_select' if item.cantidad else ''}}"><img src="{{item.image}}" class="rounded float-left item_img" onerror="this.src='/assets/qlip_bussines_theme/images/company_default_logo.jpg'" /> 
         
