--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -202,7 +202,7 @@ button {
     <div class="row">
         <div class="col-md-3">
             <div class="form-group">
-                <select class="selectpicker filter_style" data-selected-text-format="count" id= "select-Categoria" data-array = "{{Categoria_list_array}}" multiple data-live-search="true">
+                <select class="selectpicker filter_style" data-selected-text-format="count" select-type =0 id= "select-Categoria" data-array = "{{Categoria_list_array}}" multiple data-live-search="true">
 
                     {%for sku in sku_list %}
 
@@ -253,6 +253,12 @@ button {
     <div class="row " >
         <div class="col-sm-5 text-left row-abc">
             <input type="text" id = "filter_text" class="form-control" name="" id="" placeholder="Buscar por nombre">
+        </div>
+        <div class="col-sm-5 text-left row-abc row-inventary" style="display:none">
+            <input class="form-check-input" type="checkbox" id="with_inventary">
+            <label class="form-check-label" for="with_inventary">
+                Con Inventario
+            </label>
         </div>
         <div class="col-sm-7 text-right row-abc filter-abc">
             <span class= "filter_label">Nombre: </span> 
