change 3-02-2023 filter and look and feel

--- a/qp_phonix_front/templates/item_formulary/table.html
+++ b/qp_phonix_front/templates/item_formulary/table.html
@@ -4,9 +4,9 @@
 <table class = "item_list" id = "table_item_list" width= 100%>
     <thead >
         <th width = 10% class="lateralleft "></th>
-        <th width = 26%><div class="margin-left ">Nombre </div></th>
+        <th width = 26%><div class="margin-left ">Referencia </div></th>
 
-        <th ><div class="margin-left ">Producto ID</div></th>
+        <th ><div class="margin-left ">Código de item</div></th>
         
         {% if not is_internal%}
             <th ><div class="margin-left ">Precio Lista</div></th> 
@@ -20,7 +20,7 @@
             <th width = 10%><div class="margin-left ">Cantidad</div></th>
         {%endif%}
 
-        <th  ><div class="margin-left ">Multiplo</div></th>
+        <th  ><div class="margin-left ">Múltiplo</div></th>
 
         
             <th  ><div class="margin-left ">UDM</div></th>
