--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -192,6 +192,9 @@ button {
     .button-master[disabled]{
         opacity: 0.65;
     }
+    input[type=checkbox]{
+        margin-left: 0px;
+    }
 </style>
     <input type="hidden" id="order_id" value="{{order.so_name if order else ''}}">
     <div class="row " style="padding-top: 20px;">
@@ -201,16 +204,17 @@ button {
     </div>
     <div class="row">
         <div class="col-md-3">
-            <div class="form-group">
-                <select class="selectpicker filter_style" data-selected-text-format="count" select-type =0 id= "select-Categoria" data-array = "{{Categoria_list_array}}" multiple data-live-search="true">
-
-                    {%for sku in sku_list %}
-
-                        <option class="option select-Categoria {{sku.class}} {{sku.id}}" value="{{sku.code}}">{{sku.title}}</option>
-
-                    {%endfor%}
-
-                </select>
+            <div class="text-left" >
+                <input class="form-check-input" type="checkbox" id="sku_true">
+                <label class="form-check-label" for="with_inventary">
+                    Mostrar sólo referencias SKU
+                </label>
+            </div>
+            <div class="text-left row-inventary" style="display:none">
+                <input class="form-check-input" type="checkbox" id="with_inventary">
+                <label class="form-check-label" for="with_inventary" style="font-size: 13px;">
+                    Mostrar sólo referencias con stock
+                </label>
             </div>
 
         </div>
@@ -231,17 +235,17 @@ button {
         </div>
 
         <div class="col-md-2 text-left ">
-            <div class="row" style="position: absolute; bottom:15px">
+            <div class="row" style="position: absolute; top:0px">
                 <a id="filter_clear">LIMPIAR FILTRO</a>
             </div>
             
         </div>
 
         <div class="col-md-2 button-new">
-            <button id="confirm_draft"  disabled class="button-master button-default" style="width: 100%; " >CONFIRMAR</button>
+            <!--button class="button-master button-default" disabled id= "save_draft" style="width: 100%;" >GUARDAR</button-->
         </div>
         <div class="col-md-2 button-new">
-            <button class="button-master button-default" disabled id= "save_draft" style="width: 100%;" >GUARDAR</button>
+            <button id="confirm_draft"  class="button-master button-default" style="width: 100%; " >CONFIRMAR</button>
         </div>
     </div>
     
@@ -254,12 +258,7 @@ button {
         <div class="col-sm-5 text-left row-abc">
             <input type="text" id = "filter_text" class="form-control" name="" id="" placeholder="Buscar por nombre">
         </div>
-        <div class="col-sm-5 text-left row-abc row-inventary" style="display:none">
-            <input class="form-check-input" type="checkbox" id="with_inventary">
-            <label class="form-check-label" for="with_inventary">
-                Con Inventario
-            </label>
-        </div>
+        
         <div class="col-sm-7 text-right row-abc filter-abc">
             <span class= "filter_label">Nombre: </span> 
             {%for abc in filter_abc%}
