--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -256,7 +256,7 @@ button {
     <input type="hidden" id="idlevel" value="{{idlevel}}">
     <div class="row " >
         <div class="col-sm-5 text-left row-abc">
-            <input type="text" id = "filter_text" class="form-control" name="" id="" placeholder="Buscar por nombre">
+            <input type="text" id = "filter_text" class="form-control" name="" id="" placeholder="Buscar por código de item">
         </div>
         
         <div class="col-sm-7 text-right row-abc filter-abc">
