--- a/qp_phonix_front/templates/item_formulary/row.html
+++ b/qp_phonix_front/templates/item_formulary/row.html
@@ -6,11 +6,19 @@
         
         <td class="{{'item_select' if item.cantidad else ''}} item-name" ><div class="margin-left">{{item.item_name}}</div></td>
         <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.name}}</div></td>
-        <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.price | int}} COP</div></td>
 
-        {% if not is_internal%}
+
+        
+
+        {% if rol != "Phonix external technical"%}
+
+            <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.price_format}} COP</div></td>
+        {%endif%}
+
+        {% if rol == "Phonix external" %}
+
             <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.discountpercentage}} %</div></td>
-            <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.price_discount | int}} COP</div></td>
+            <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.price_discount_format}} COP</div></td>
 
         {%endif%}
 
@@ -24,14 +32,18 @@
                 {%endif%}
             </div>
         </td>
-        {% if not is_internal%}
+        {% if rol != "Phonix internal"%}
             <td class="padding_list {{'item_select' if item.cantidad else ''}}"><input type="number" class="form-control quantity " id="quantity" value={{item.cantidad}} data-is_internal = "{{is_internal}}" data-quantity = "{{item.quantity}}" data-value = {{item.cantidad}} data-factor = "{{item.inqt}}" data-select= "{{item.name | replace(':','-')}}" min = 0 max = {{item.quantity}} ></td>
         {%endif%}
         
         <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left ">Unidad <br> x {{item.inqt}}</div></td>
-        <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.stock_uom}}</div></td>
         
-        {% if is_internal%}
+        {% if rol != "Phonix external technical"%}
+
+            <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.stock_uom}}</div></td>
+        {%endif%}
+        
+        {% if rol != "Phonix external"%}
             <td class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.sku}}</div></td>
         {%endif%}
     </tr>
