--- a/qp_phonix_front/templates/item_formulary/table.html
+++ b/qp_phonix_front/templates/item_formulary/table.html
@@ -8,30 +8,35 @@
 
         <th ><div class="margin-left ">Código de item</div></th>
         
-        {% if rol == "Phonix external" %}
-            <th ><div class="margin-left " style="font-size: 13px;">Precio Lista</div></th> 
+        {% if permission.price_format %}
+            <th ><div class="margin-left " style="font-size: 13px;">Precio lista x unidad</div></th> 
+        {%endif%}
+        
+        {% if permission.discountpercentage %}
+
             <th ><div class="margin-left ">Descuento</div></th>
         {%endif%}
 
-        {% if rol != "Phonix external technical"%}
+        {% if permission.price_discount_format %}
 
-            <th ><div class="margin-left " style="font-size: 13px;">Precio</div></th> 
+            <th ><div class="margin-left " style="font-size: 13px;">Precio x unidad</div></th> 
         {%endif%}
 
         <th ><div class="margin-left ">Inventario</div></th>
         
-        {% if rol != "Phonix internal"%}
+        {% if permission.quantity %}
             <th width = 10%><div class="margin-left ">Cantidad</div></th>
         {%endif%}
 
-        <th  ><div class="margin-left ">Múltiplo</div></th>
+        <th  ><div class="margin-left ">Pedir por paquetes de</div></th>
 
-        {% if rol != "Phonix external technical"%}
+        {% if permission.stock_uom %}
         
             <th  ><div class="margin-left ">UDM</div></th>
         {%endif%}
         
-        {% if rol != "Phonix external"%}
+        {% if permission.sku %}
+
             <th  ><div class="margin-left ">SKU</div></th>
 
         {%endif%}
