change function basic

--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -2,7 +2,7 @@
 
 {% block alphas_js %}
 <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js" integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+<script src="/assets/qp_phonix_front/js/bootstrap-select.min.js"></script>
 <script src="/assets/qp_phonix_front/js/item_formulary.js"></script>
 <script src="/assets/qp_phonix_front/js/item_formulary_filter.js"></script>
 <script src="/assets/qp_phonix_front/js/img_detail.js"></script>
