change title page

--- a/qp_phonix_front/templates/defination.html
+++ b/qp_phonix_front/templates/defination.html
@@ -1,6 +1,6 @@
 {% extends "frappe/templates/web.html" %}
 
-{% block title %}{{ _("Phonix") }}{% endblock %}
+{% block title %}{{ _("Phoenix Contact") }}{% endblock %}
 
 {% block alphas_js %}
 <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js" integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA=" crossorigin="anonymous"></script>
