blockscreen on filter action

--- a/qp_phonix_front/templates/main.html
+++ b/qp_phonix_front/templates/main.html
@@ -279,8 +279,10 @@
       </div>
     </div>
   </div>
+<div class="modal" id="blockscreen-modal" data-backdrop="static" data-keyboard="false" tabindex="-1">
+</div>
+
   <div id="loader" class="loader" style="display: none;"></div> 
-  
   <div id="blockscreen" class="text-center">
         <!--    img src="/assets/qp_phonix_front/img/loading.gif" style="height: 150px !important;" alt=""-->
   </div>
