change intermal permision an translate delete message

--- a/qp_phonix_front/templates/main.html
+++ b/qp_phonix_front/templates/main.html
@@ -268,7 +268,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure you want to proceed?</p>
+          <p>¿Estas seguro que deseas continuar?</p>
         </div>
         <div class="modal-footer text-right">
             <input type="hidden" id = "type">
