--- a/qp_phonix_front/templates/main.html
+++ b/qp_phonix_front/templates/main.html
@@ -262,7 +262,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">  
-          <h5 class="modal-title">Confirm</h5>
+          <h5 class="modal-title">Confirmar</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
