translate button yes delete message

--- a/qp_phonix_front/templates/main.html
+++ b/qp_phonix_front/templates/main.html
@@ -274,7 +274,7 @@
             <input type="hidden" id = "type">
             <input type="hidden" id = "line">
           <button type="button" class="btn btn-default" id="button_no" data-dismiss="modal">No</button>
-          <button type="button" data-type = "-1" id="button_yes" class="btn button-master button-default button-new">Yes</button>
+          <button type="button" data-type = "-1" id="button_yes" class="btn button-master button-default button-new">Sí</button>
         </div>
       </div>
     </div>
